--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Erro - TickIN</title>
-    <link rel="stylesheet" href="/css/global.css">
+    <link rel="stylesheet" href="/css/global.css" 
+    lesheet href="css/header.css" />
+    <link rel="stylesheet" href="css/auth.css" />
     <style>
         .error-container {
             max-width: 600px;
